# political_alignment_case_study

./: README.md  pyproject.toml
notebooks/: 01_clean.ipynb  02_polviews.ipynb  03_outlook.ipynb  04_worldview.ipynb
