[tool.poetry]
name = "political-alignment-case-study"
version = "0.1.0"
description = "Political Alignment Case Study from the Elements of Data Science book by Allen Downey"
authors = ["Wilder B. Galvão <wbgalvao@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
scipy = "^1.14.1"
statsmodels = "^0.14.2"
tables = "^3.10.1"
empiricaldist = "^0.7.4"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
